--- a/client/src/assets/scss/projectDataList.scss
+++ b/client/src/assets/scss/projectDataList.scss
@@ -136,6 +136,7 @@
                                     .table{
                                         width: 97%;
                                         .proj_table_title{
+                                            text-align: center;
                                             background-color: #808080;
                                             .proj_table_title_content_vertical{
                                                 color: #fff;
@@ -153,6 +154,7 @@
                                                 }
                                                 .proj_table_body_content_vertical{
                                                     border: none;
+                                                    text-align: center;
                                                 }
                                             }
                                         }
