--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -64,9 +64,10 @@
                         opacity: 30%;
                     }
                     .EmployeesRegistration_form-content{
-                        padding: 15px 0px 0px 20px;
+                        padding: 15px 80px 0px 20px;
                         .EmployeesRegistration_form-div{
                             display: flex;
+                            gap: 60px;
                             .EmployeesRegistration_calc{
                                 width: calc(100%/3);
                             }
@@ -79,7 +80,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -93,7 +94,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -109,7 +110,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -123,7 +124,7 @@
                                         margin-bottom: 5px;
                                     }
                                     .EmployeesRegistration_select-option{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -142,7 +143,7 @@
                                         margin-bottom: 5px;
                                     }
                                     input{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
@@ -156,7 +157,7 @@
                                         margin-bottom: 5px;
                                     }
                                     .EmployeesRegistration_select-option{
-                                        width: 80%;
+                                        // width: 80%;
                                         height: 40px;
                                         border: 1px solid #000;
                                         border-radius: 10px;
